working map options

--- a/MH-MapTool/options.html
+++ b/MH-MapTool/options.html
@@ -29,15 +29,15 @@
 		</label>
 		<br>
 		<label>
-			<input type="radio" name="city" value="name"> city name
+			<input type="radio" name="city" value="_city"> city name
 		</label>
 		<br>
 		<label>
-			<input type="radio" name="city" value="player"> player name
+			<input type="radio" name="city" value="_player"> player name
 		</label>
 		<br>
 		<label>
-			<input type="radio" name="city" value="alliance"> player alliance (if any)
+			<input type="radio" name="city" value="_alliance"> player alliance (if any)
 		</label>
 	</fieldset>
 	<fieldset name="debris">
