Line color chooser, strigtening lines

--- a/MH-MapTool/options.html
+++ b/MH-MapTool/options.html
@@ -17,6 +17,10 @@
 		<label>
 			<input type="checkbox" id="grid-lines" name="gridLines" checked> Show grid lines on map
 		</label>
+		<label>
+			<input type="color" id="grid-lines-color" name="gridLinesColor" value="#8f4050">
+			<input type="color" id="grid-portal-color" name="gridPortalColor" value="#ef5884">
+		</label>
 		<br>
 		<label>
 			<input type="checkbox" id="field-value" name="fieldValue"  checked> Show field antimatter or enegy value
