Fixed count button

--- a/MH-MapTool/options.html
+++ b/MH-MapTool/options.html
@@ -89,9 +89,15 @@
 		</label>
 		<br>
 		<label>
+			<input type="checkbox" id="harvs-button-fixed"  name="harvsButtonFixed">
+			<input type="radio" id="default-button-fixed" name="defaultButton" value="fixed" title="Set as default"> Send out 
+			<input type="number" id="harvs-fixed" name="harvsFixed" value="1" min="1" max="999"> harvester(s)
+		</label>
+		<br>
+		<label>
 			<input type="checkbox" id="harvs-button-minus"  name="harvsButtonMinus">
 			<input type="radio" id="default-button-minus" name="defaultButton" value="minus" title="Set as default"> Harvest to leave 
-			<input type="number" id="harvs-minus" name="harvsMinus" value="1" min="1" max="99"> harvester loads behind
+			<input type="number" id="harvs-minus" name="harvsMinus" value="1" min="1" max="999"> harvester loads behind
 		</label>
 		<br>
 		<label>
